--- a/docs/release/trg-5/trg-5-02.md
+++ b/docs/release/trg-5/trg-5-02.md
@@ -4,6 +4,7 @@ title: TRG 5.02 - Chart structure
 
 | Status | Created     | Post-History                                           |
 |--------|-------------|--------------------------------------------------------|
+| Update | 28-Oct-2025 | Migrate from Bitnami to Cloudpirates                   |
 | Draft  | 17-Jul-2023 | templates/NOTES.txt made optional                      |
 | Active | 10-Jan-2023 | add prerequisite and TL;DR as requirement in README.md |
 | Active | 10-Nov-2022 | Initial release                                        |
@@ -119,7 +120,7 @@ The README.md file **must** contain:
 - a section of "TL;DR" that includes the helm commands to add and install the helm chart, Example:
 
   ```shell
-  helm repo add my-repo https://charts.bitnami.com/bitnami
+  helm repo add [REPO_URL] oci://registry-1.docker.io/cloudpirates
   helm install my-release my-repo/postgresql
   ```
 
