revise contributors and committers for release 25.12
Updated contributors and committers sections with new counts and images.

--- a/blog-changelog/2025-12-03-release-25.12.md
+++ b/blog-changelog/2025-12-03-release-25.12.md
@@ -11,9 +11,97 @@ hide_table_of_contents: false
 
 Our community and results/releases depends on our contributors. **We want to thank everyone who has contributed** to this release by reporting issues, discussing solutions, writing code, or reviewing contributions.
 
-### Contributors
+### Contributors (53)
 
-### Committers (34)
+[![AYaoZhan](https://images.weserv.nl/?url=github.com/AYaoZhan.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/AYaoZhan)
+[![jSchuetz88](https://images.weserv.nl/?url=github.com/jSchuetz88.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/jSchuetz88)
+[![ReneSchroederLJ](https://images.weserv.nl/?url=github.com/ReneSchroederLJ.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/ReneSchroederLJ)
+[![shijinrajbosch](https://images.weserv.nl/?url=github.com/shijinrajbosch.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/shijinrajbosch)
+[![jalvaro-lks](https://images.weserv.nl/?url=github.com/jalvaro-lks.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/jalvaro-lks)
+[![bosserf](https://images.weserv.nl/?url=github.com/bosserf.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/bosserf)
+[![sm29105](https://images.weserv.nl/?url=github.com/sm29105.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/sm29105)
+[![Alaitz1](https://images.weserv.nl/?url=github.com/Alaitz1.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/Alaitz1)
+[![pjuaristi-ikerlan](https://images.weserv.nl/?url=github.com/pjuaristi-ikerlan.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/pjuaristi-ikerlan)
+[![tfjanjua](https://images.weserv.nl/?url=github.com/tfjanjua.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/tfjanjua)
+[![MDSBarbosa](https://images.weserv.nl/?url=github.com/MDSBarbosa.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/MDSBarbosa)
+[![ds-asmierzchalski](https://images.weserv.nl/?url=github.com/ds-asmierzchalski.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/ds-asmierzchalski)
+[![anneramsauer](https://images.weserv.nl/?url=github.com/anneramsauer.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/anneramsauer)
+[![JordanGerada3](https://images.weserv.nl/?url=github.com/JordanGerada3.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/JordanGerada3)
+[![Grand-Thibault](https://images.weserv.nl/?url=github.com/Grand-Thibault.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/Grand-Thibault)
+[![OlgaIvkovic](https://images.weserv.nl/?url=github.com/OlgaIvkovic.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/OlgaIvkovic)
+[![MonikaJacobsen](https://images.weserv.nl/?url=github.com/MonikaJacobsen.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/MonikaJacobsen)
+[![adkumar1](https://images.weserv.nl/?url=github.com/adkumar1.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/adkumar1)
+[![JulianSchererZF](https://images.weserv.nl/?url=github.com/JulianSchererZF.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/JulianSchererZF)
+[![kkotowiczz](https://images.weserv.nl/?url=github.com/kkotowiczz.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/kkotowiczz)
+[![hokonohara](https://images.weserv.nl/?url=github.com/hokonohara.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/hokonohara)
+[![borjakhet](https://images.weserv.nl/?url=github.com/borjakhet.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/borjakhet)
+[![leandro-cavalcante](https://images.weserv.nl/?url=github.com/leandro-cavalcante.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/leandro-cavalcante)
+[![Akash-IAV](https://images.weserv.nl/?url=github.com/Akash-IAV.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/Akash-IAV)
+[![marcelruland](https://images.weserv.nl/?url=github.com/marcelruland.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/marcelruland)
+[![manourym](https://images.weserv.nl/?url=github.com/manourym.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/manourym)
+[![sb3nz](https://images.weserv.nl/?url=github.com/sb3nz.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/sb3nz)
+[![Usmanfee](https://images.weserv.nl/?url=github.com/Usmanfee.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/Usmanfee)
+[![stanfaldin](https://images.weserv.nl/?url=github.com/stanfaldin.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/stanfaldin)
+[![zygokaktus](https://images.weserv.nl/?url=github.com/zygokaktus.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/zygokaktus)
+[![zanpi8020](https://images.weserv.nl/?url=github.com/zanpi8020.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/zanpi8020)
+[![th0masgl](https://images.weserv.nl/?url=github.com/th0masgl.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/th0masgl)
+[![wehrstedt-jan](https://images.weserv.nl/?url=github.com/wehrstedt-jan.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/wehrstedt-jan)
+[![LukasSchmetz](https://images.weserv.nl/?url=github.com/LukasSchmetz.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/LukasSchmetz)
+[![kunyao-cofinity-x](https://images.weserv.nl/?url=github.com/kunyao-cofinity-x.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/kunyao-cofinity-x)
+[![tobzahn](https://images.weserv.nl/?url=github.com/tobzahn.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/tobzahn)
+[![SanaSalem01](https://images.weserv.nl/?url=github.com/SanaSalem01.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/SanaSalem01)
+[![kss682](https://images.weserv.nl/?url=github.com/kss682.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/kss682)
+[![hkny](https://images.weserv.nl/?url=github.com/hkny.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/hkny)
+[![thomas-henn](https://images.weserv.nl/?url=github.com/thomas-henn.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/thomas-henn)
+[![M-Busk](https://images.weserv.nl/?url=github.com/M-Busk.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/M-Busk)
+[![Kuehner-A](https://images.weserv.nl/?url=github.com/Kuehner-A.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/Kuehner-A)
+[![flarrinaga](https://images.weserv.nl/?url=github.com/flarrinaga.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/flarrinaga)
+[![DanielaWuensch](https://images.weserv.nl/?url=github.com/DanielaWuensch.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/DanielaWuensch)
+[![Jochen-Fischer](https://images.weserv.nl/?url=github.com/Jochen-Fischer.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/Jochen-Fischer)
+[![tanvirrb](https://images.weserv.nl/?url=github.com/tanvirrb.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/tanvirrb)
+[![dirk-qualisys](https://images.weserv.nl/?url=github.com/dirk-qualisys.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/dirk-qualisys)
+[![sachinargade123](https://images.weserv.nl/?url=github.com/sachinargade123.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/sachinargade123)
+[![JSterthues](https://images.weserv.nl/?url=github.com/JSterthues.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/JSterthues)
+[![jschu1](https://images.weserv.nl/?url=github.com/jschu1.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/jschu1)
+[![Sebastian-Wurm](https://images.weserv.nl/?url=github.com/Sebastian-Wurm.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/Sebastian-Wurm)
+[![tobikleinfrd](https://images.weserv.nl/?url=github.com/tobikleinfrd.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/tobikleinfrd)
+[![bilge-erdem](https://images.weserv.nl/?url=github.com/bilge-erdem.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/bilge-erdem)
+
+### Committers (33)
+
+[![matbmoser](https://images.weserv.nl/?url=github.com/matbmoser.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/matbmoser)
+[![CDiezRodriguez](https://images.weserv.nl/?url=github.com/CDiezRodriguez.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/CDiezRodriguez)
+[![lgblaumeiser](https://images.weserv.nl/?url=github.com/lgblaumeiser.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/lgblaumeiser)
+[![stephanbcbauer](https://images.weserv.nl/?url=github.com/stephanbcbauer.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/stephanbcbauer)
+[![nicoprow](https://images.weserv.nl/?url=github.com/nicoprow.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/nicoprow)
+[![AndrYurk](https://images.weserv.nl/?url=github.com/AndrYurk.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/AndrYurk)
+[![SujitMBRDI](https://images.weserv.nl/?url=github.com/SujitMBRDI.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/SujitMBRDI)
+[![typecastcloud](https://images.weserv.nl/?url=github.com/typecastcloud.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/typecastcloud)
+[![bmg13](https://images.weserv.nl/?url=github.com/bmg13.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/bmg13)
+[![mgarciaLKS](https://images.weserv.nl/?url=github.com/mgarciaLKS.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/mgarciaLKS)
+[![ClosedSourcerer](https://images.weserv.nl/?url=github.com/ClosedSourcerer.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/ClosedSourcerer)
+[![ther3sa](https://images.weserv.nl/?url=github.com/ther3sa.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/ther3sa)
+[![tom-rm-meyer-ISST](https://images.weserv.nl/?url=github.com/tom-rm-meyer-ISST.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/tom-rm-meyer-ISST)
+[![rafaelmag110](https://images.weserv.nl/?url=github.com/rafaelmag110.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/rafaelmag110)
+[![tomaszbarwicki](https://images.weserv.nl/?url=github.com/tomaszbarwicki.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/tomaszbarwicki)
+[![saadanzari](https://images.weserv.nl/?url=github.com/saadanzari.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/saadanzari)
+[![eclipse-tractusx-bot](https://images.weserv.nl/?url=github.com/eclipse-tractusx-bot.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/eclipse-tractusx-bot)
+[![agg3fe](https://images.weserv.nl/?url=github.com/agg3fe.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/agg3fe)
+[![dhiren-singh-007](https://images.weserv.nl/?url=github.com/dhiren-singh-007.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/dhiren-singh-007)
+[![manojava-gk](https://images.weserv.nl/?url=github.com/manojava-gk.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/manojava-gk)
+[![rogocof](https://images.weserv.nl/?url=github.com/rogocof.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/rogocof)
+[![Phil91](https://images.weserv.nl/?url=github.com/Phil91.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/Phil91)
+[![ds-jhartmann](https://images.weserv.nl/?url=github.com/ds-jhartmann.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/ds-jhartmann)
+[![paullatzelsperger](https://images.weserv.nl/?url=github.com/paullatzelsperger.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/paullatzelsperger)
+[![nitin-vavdiya](https://images.weserv.nl/?url=github.com/nitin-vavdiya.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/nitin-vavdiya)
+[![evegufy](https://images.weserv.nl/?url=github.com/evegufy.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/evegufy)
+[![almadigabor](https://images.weserv.nl/?url=github.com/almadigabor.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/almadigabor)
+[![mhellmeier](https://images.weserv.nl/?url=github.com/mhellmeier.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/mhellmeier)
+[![saudkhan116](https://images.weserv.nl/?url=github.com/saudkhan116.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/saudkhan116)
+[![maximilianong](https://images.weserv.nl/?url=github.com/maximilianong.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/maximilianong)
+[![ndr-brt](https://images.weserv.nl/?url=github.com/ndr-brt.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/ndr-brt)
+[![ntruchsess](https://images.weserv.nl/?url=github.com/ntruchsess.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/ntruchsess)
+[![florianrusch](https://images.weserv.nl/?url=github.com/florianrusch.png&h=40&w=40&fit=cover&mask=circle&maxage=7d)](https://github.com/florianrusch)
 
 :::note
 
